--- a/app/views/gallery.hbs
+++ b/app/views/gallery.hbs
@@ -8,15 +8,15 @@
         <div class="uk-margin">
           <label class="uk-form-label" for="form-horizontal-text">Name</label>
           <div class="uk-form-controls">
-            <input class="uk-input" id="form-horizontal-text" type="text" name="name" value="{{cloudinary.name}}">
+            <input class="uk-input" id="form-horizontal-text" type="text" name="name" value="{{cloudinary.cloud_name}}">
           </div>
           <label class="uk-form-label" for="form-horizontal-text">Key</label>
           <div class="uk-form-controls">
-            <input class="uk-input" id="form-horizontal-text" type="text" name="key" value="{{cloudinary.key}}">
+            <input class="uk-input" id="form-horizontal-text" type="text" name="key" value="{{cloudinary.api_key}}">
           </div>
           <label class="uk-form-label" for="form-horizontal-text">Secret</label>
           <div class="uk-form-controls">
-            <input class="uk-input" id="form-horizontal-text" type="text" name="secret" value="{{cloudinary.secret}}">
+            <input class="uk-input" id="form-horizontal-text" type="text" name="secret" value="{{cloudinary.api_secret}}">
           </div>
         </div>
         <p uk-margin>
