--- a/app/views/gallery.hbs
+++ b/app/views/gallery.hbs
@@ -2,50 +2,17 @@
 
 <div class="uk-child-width-1-2@m uk-grid-small uk-grid-match" uk-grid>
   <div>
-    <div class="uk-card uk-card-default uk-card-body">
-      <h3 class="uk-card-title">Cloudinary Credentials</h3>
-      <form class="uk-form-horizontal" action="/updatecredentials" method="POST">
-        <div class="uk-margin">
-          <label class="uk-form-label" for="form-horizontal-text">Name</label>
-          <div class="uk-form-controls">
-            <input class="uk-input" id="form-horizontal-text" type="text" name="name" value="{{cloudinary.cloud_name}}">
-          </div>
-          <label class="uk-form-label" for="form-horizontal-text">Key</label>
-          <div class="uk-form-controls">
-            <input class="uk-input" id="form-horizontal-text" type="text" name="key" value="{{cloudinary.api_key}}">
-          </div>
-          <label class="uk-form-label" for="form-horizontal-text">Secret</label>
-          <div class="uk-form-controls">
-            <input class="uk-input" id="form-horizontal-text" type="text" name="secret" value="{{cloudinary.api_secret}}">
-          </div>
-        </div>
-        <p uk-margin>
-          <input type="submit" value="Update" class="uk-button uk-button-default"></input>
-        </p>
-      </form>
-    </div>
+    {{> credentials }}
   </div>
-
   <div>
-    <div class="uk-card uk-card-primary uk-card-body">
-      <h3 class="uk-card-title">Image Upload</h3>
-      <form class="uk-form-horizontal" action="/uploadfile" method="POST" enctype="multipart/form-data">
-        <div class="uk-margin">
-          <label class="uk-form-label" for="form-horizontal-text">Select Image</label>
-          <div class="uk-form-controls">
-            <input type="file" class="uk-input"
-                   name="imagefile"
-                   accept="image/png, image/jpeg">
-          </div>
-          <label class="uk-form-label" for="form-horizontal-text">Title</label>
-          <div class="uk-form-controls">
-            <input class="uk-input" id="form-horizontal-text" type="text" name="title" placeholder="Enter image title...">
-          </div>
-        </div>
-        <p uk-margin>
-          <input type="submit" value="Upload" class="uk-button uk-button-default">
-        </p>
-      </form>
-    </div>
+    {{> upload }}
+  </div>
+</div>
+
+<div class="uk-container uk-padding-small">
+  <div class="uk-child-width-1-4@s uk-flex uk-flex-center" uk-grid uk-height-match="target: .uk-card">
+    {{#each images}}
+      {{> card}}
+    {{/each}}
   </div>
 </div>
