refactor the card views

--- a/app/views/partials/card.hbs
+++ b/app/views/partials/card.hbs
@@ -3,5 +3,10 @@
     <div class="uk-card-media-top">
       <img src="{{url}}">
     </div>
+    <div>
+      <div class="uk-card-footer">
+        <a href="/deleteimage/{{public_id}}" uk-icon="icon: trash"></a>
+      </div>
+    </div>
   </div>
 </div>
