factor out cloudinary interaction to separate module

--- a/app/views/partials/credentials.hbs
+++ b/app/views/partials/credentials.hbs
@@ -18,6 +18,7 @@
     </div>
     <p uk-margin>
       <input type="submit" value="Update" class="uk-button uk-button-default"></input>
+      {{error}}
     </p>
   </form>
 </div>
