show id in image card

--- a/app/views/partials/card.hbs
+++ b/app/views/partials/card.hbs
@@ -5,6 +5,7 @@
     </div>
     <div>
       <div class="uk-card-footer">
+        <p> {{public_id}}</p>
         <a href="/deleteimage/{{public_id}}" uk-icon="icon: trash"></a>
       </div>
     </div>
